; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest6.c_simple_oom_2.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest6.c_simple_oom_2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LSM_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"testdb.lsm\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @simple_oom_2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @simple_oom_2(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = call i32 (...) @tdb_lsm_env()
  %6 = call i32 @lsm_new(i32 %5, i32** %4)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @LSM_OK, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @lsm_open(i32* %11, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  store i32 %12, i32* %3, align 4
  br label %13

13:                                               ; preds = %10, %1
  %14 = load i32*, i32** %2, align 8
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @testOomAssertRc(i32* %14, i32 %15)
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @lsm_close(i32* %17)
  ret void
}

declare dso_local i32 @lsm_new(i32, i32**) #1

declare dso_local i32 @tdb_lsm_env(...) #1

declare dso_local i32 @lsm_open(i32*, i8*) #1

declare dso_local i32 @testOomAssertRc(i32*, i32) #1

declare dso_local i32 @lsm_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
